--- a/practice/storybook-static/src/component/Checkbox/Checkbox.css
+++ b/practice/storybook-static/src/component/Checkbox/Checkbox.css
@@ -1,20 +1,41 @@
-.item-checkbox {
-  width: 28px;
-  height: 28px;
+.checkbox-primary {
+  width: 32px;
+  height: 32px;
   -webkit-appearance: none;
   cursor: pointer;
 }
 
-.item-checkbox::before {
+.checkbox-primary::before {
   content: '';
   display: block;
   height: inherit;
   background-size: contain;
-  /* box-shadow: inset 0 0 0 1px #ccd3d8; */
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23949494%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
 }
 
-.item-checkbox:checked::before {
+.checkbox-primary:checked::before {
   box-shadow: none;
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%2359A193%22%20stroke-width%3D%223%22%2F%3E%3Cpath%20fill%3D%22%233EA390%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.checkbox-secondary {
+  justify-content: center;
+  align-items: center;
+  width: 52px;
+  height: 65px;
+  display: flex;
+}
+
+.checkbox-secondary::before {
+  content: '❯';
+  background-color: var(--color-base);
+  font-size: var(--font-size-m);
+  padding: 10px 25px;
+  transform: rotate(90deg);
+}
+
+.checkbox-secondary:checked {
+  box-shadow: 0 0 2px 2px #cf7d7d;
+  outline: 0;
+  color: var(--color-tertiary);
 }
