feat(component): update CardItem

--- a/practice/src/component/CardItem/CardItem.css
+++ b/practice/src/component/CardItem/CardItem.css
@@ -1,12 +1,17 @@
 .cart-item {
   display: flex;
+  position: relative;
   height: 65px;
-  min-width: 230px;
+  width: 100%;
   align-items: center;
   gap: 10px;
   cursor: default;
   background-color: var(--color-base);
   border-bottom: 1px solid #ededed;
+
+  &:hover .button-delete {
+    display: block;
+  }
 }
 
 .cart-label {
@@ -16,4 +21,12 @@
 .completed-label {
   text-decoration: line-through;
   color: var(--color-tertiary);
+}
+
+.button-delete {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  display: none;
 }
