--- a/practice/src/component/Input/Input.css
+++ b/practice/src/component/Input/Input.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 65px;
   padding: 16px 16px 16px 60px;
+  margin-bottom: 2px;
   box-sizing: border-box;
   font: inherit;
 
